--- a/pluto-filosofi.html
+++ b/pluto-filosofi.html
@@ -3,19 +3,15 @@
  <head>
  	<link href="./pluto-style.css" type="text/css" rel="stylesheet">
  </head>
- <body> 
- 	<p></p>
+ <body style="background-color: #FBF9F5"> 
 	<a href="./pluto-filosofi.html" id="philosophy">VÅR FILOSOFI OCH TJÄNSTER 🠢</a>
 	<header>
 		<meta charset="utf-8">
-		<h2 id="logo">Pluto</h2>
+				<IMG class="logo" SRC="./images/logga1.png" ALT="pluto" WIDTH:277 HEIGHT=92>
+		<p class="logoborder"></p>
 	</header>
 <h1 id="rubrikinfo">VÅR FILOSOFI</h1>
-
-
-<p id="underrubrik">Pluto är ett kollektiv som levererar <br>kommunikation
-där identitet och autenticitet<br>
-prioriteras över trender.</h2>
+<p id="underrubrik">Pluto är ett kollektiv som levererar kommunikation<br> där identitet och autenticitet prioriteras över trender.</h2>
 <h1 id="rubrikinfo2">VÅRA TJÄNSTER</h1>
 <p id="pinfo">Pluto består av kreatörer och vänner som gemensamt designar och utvecklar visuellt
 tilltalande varumärken. Vi sammanflätar identitet, berättelser och grafik för att leverera
@@ -26,7 +22,7 @@ strävar mot att generera meningsfulla möten och upplevelser.</p>
 <p id="pinfo">Det spelar ingen roll vart du är. Vare sig du bor runt hörnet från oss eller på andra
 sidan världen är vi bra på det här med att arbeta på distans. Vi skapar kreativ och
 tilltalande kommunikation för kunder överallt. Pluto finns stationärt i Malmö, Köpenhamn
-och Berlin – du når oss snabbast via <a href="mail">hej@ilovepluto.se</a>
+och Berlin – du når oss snabbast via <a href="mailto: hej@ilovepluto.se" id="mail">hej@ilovepluto.se</a>
 </p>
  </body>
  </html>
