--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
  <head>
-
+ 	<link rel="shortcut icon" href="favicon.ico"/>
  	<link href="./pluto-style.css" type="text/css" rel="stylesheet">
  	    <link href="https://fonts.googleapis.com/css?family=Rakkas|Yatra+One&display=swap" rel="stylesheet">
-    <title>pluto</title>
+    <title>Pluto</title>
   </head>
 <!-- background="sol1.jpg"-->
 <body body style="background-color: #FBF9F5">
-	<div class="imgbg"><IMG SRC="./images/imgbg.png" ALT="sol" WIDTH:600 HEIGHT=598></div>
+	<div class="imgbg"><img src="./images/imgbg.png" alt="sol"  WIDTH:600 HEIGHT=598></div>
 	<!-- för marginal övanför länk<p></p>-->
-	<a href="./pluto-filosofi.html" id="philosophy">VÅR FILOSOFI OCH TJÄNSTER 🠢</a>
+	<a href="./pluto-filosofi.html" id="philosophy">VÅR FILOSOFI OCH TJÄNSTER →</a>
 	<header>
 		<meta charset="utf-8">
+		<a href="./pluto.html">
 		<IMG class="logo" SRC="./images/logga1.png" ALT="pluto" WIDTH:277 HEIGHT=92>
+		</a>
 		<p class="logoborder"></p>
 	</header>
 	<main>
@@ -21,7 +23,7 @@
 		<h1>Kommunikation<br> för en skeptisk <br>generation</h1>
 		<div class=startlink>
 		<a href="./pluto-filosofi.html">
-		<h3 class="introlink">Din strategiska och kreativa <br>partner i kommunikationsdjungeln🠢</p>
+		<h3 class="introlink">Din strategiska och kreativa <br>partner i kommunikationsdjungeln→</p>
 		</a>
 	</div>
 	<div class="image">
